--- a/index.html
+++ b/index.html
@@ -1,1 +1,205 @@
-hello world!
+<!DOCTYPE HTML>
+<!--
+    Miniport by HTML5 UP
+    html5up.net | @ajlkn
+    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+    <head>
+        <title>Seongil Homepage</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <link rel="stylesheet" href="assets/css/main.css" />
+    </head>
+    <body class="is-preload">
+
+        <!-- Nav -->
+        <nav id="nav">
+            <ul class="container">
+                <li><a href="#top">Top</a></li>
+                <li><a href="#aboutme">About Me</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#publications">Publications</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#honors">Honors</a></li>
+            </ul>
+        </nav>
+
+        <!-- Home -->
+        <article id="top" class="wrapper style1">
+            <div class="container">
+                <div class="row">
+                    <div class="col-4 col-5-large col-12-medium">
+                        <span class="image fit"><img src="images/profile.jpeg" alt="" /></span>
+                    </div>
+
+                    <div class="col-8 col-7-large col-12-medium">
+                        <header>
+                            <h1>Hi. I'm <strong>Seongil Wi</strong>.</h1>
+                            <p><i>Philippians 4:13 - I can do all this through him who gives me strength.</i></p>
+                        </header>
+                        <p>Hi, I am a Ph.D student, and a member of <a href="https://sites.google.com/site/ssonkaist/home">WSP Lab</a> in KAIST.</p>
+                        <a href="#aboutme" class="button large scrolly">Learn about what I do</a>
+                    </div>
+                </div>
+            </div>
+        </article>
+
+
+        <!-- aboutme -->
+        <article id="aboutme" class="wrapper style2">
+            <div class="container">
+                <h2><i class="fas fa-user-tag"></i> About Me</h2>
+                I am currently Ph.D student at <a href="http://www.kaist.ac.kr/">KAIST</a>. </br> 
+                My current research interest spans mainly around software and
+                web security, program analysis, fuzz testing, and security
+                education. </br>
+                <i class="fas fa-home"></i> Room 2307, N5 Building, KAIST</br>
+                <i class="fas fa-envelope"></i> seongil.wi@kaist.ac.kr</br></br>
+
+                <div class="row aln-center">
+                    <div class="col-4 col-6-medium col-12-small">
+                        <section class="box style1">
+                            <a href="https://www.facebook.com/wi.sungill" style="font-size: 3em; color: Dodgerblue;">
+                                <i class="fab fa-facebook-square"></i>
+                            </a>
+                            <h3>Facebook</h3>
+                        </section>
+                    </div>
+                    <div class="col-4 col-6-medium col-12-small">
+                        <section class="box style1">
+                            <a href="mailto:seongil.wi@kaist.ac.kr" style="font-size: 3em; color: Dodgerblue;">
+                                <i class="fas fa-envelope"></i>
+                            </a>
+                            <h3>Email</h3>
+                        </section>
+                    </div>
+                    <div class="col-4 col-6-medium col-12-small">
+                        <section class="box style1">
+                            <a href="https://github.com/seongil-wi" style="font-size: 3em; color: Dodgerblue;">
+                                <i class="fab fa-github-square"></i>
+                            </a>
+                            <h3>Github</h3>
+                        </section>
+                    </div>
+                </div>
+
+            </div>
+
+        </article>
+
+
+        <!-- education -->
+        <article id="education" class="wrapper style3">
+            <div class="container">
+                <h2><i class="fas fa-graduation-cap"></i> Education</h2>
+                <ul>
+                    <li>
+                        <strong>2019 - <i class="far fa-clock"></i></strong> <br>
+                        <strong>Ph.D <a href="https://sites.google.com/site/ssonkaist/home">@KAIST WSP Lab</a></strong>, <a href="https://gsis.kaist.ac.kr/">Graduate School of Information Security</a>, <a href="http://www.kaist.ac.kr/">KAIST</a> (Advisor: <a href="https://sites.google.com/site/ssonkaist/home">Sooel Son</a>)
+                    </li>
+                    <br>
+                    <li>
+                        <strong>2017 - 2018</strong> <br>
+                        <strong>M.S <a href="https://softsec.kaist.ac.kr/">@KAIST SoftSec Lab</a></strong>, <a href="https://gsis.kaist.ac.kr/">Graduate School of Information Security</a>, <a href="http://www.kaist.ac.kr/">KAIST</a> (Advisor: <a href="https://softsec.kaist.ac.kr/~sangkilc/">Sang Kil Cha</a>)
+                    </li>
+                    <br>
+
+                    <li>
+                        <strong>2013 - 2016</strong> <br>
+                        <strong>B.S</strong>, <a href="http://csee.handong.edu/">School of Computer Science And Electrical Engineering</a>, <a href="https://www.handong.edu/">Handong Global University</a>
+                    </li>
+                    <br>
+                </ul>
+            </div>
+        </article>
+
+        <!-- publications -->
+        <article id="publications" class="wrapper style2">
+            <div class="container">
+                <h2><i class="fas fa-book"></i> Publications</h2>
+                <ol>
+                    <li>
+                        <strong>FSF: Code Coverage-driven Fuzzing for Software-Defined Networking (<a href="http://www.wisa.or.kr/">PDF</a>) (to appear)</strong><br>
+                        Hyuntae Kim, <strong>Seongil Wi</strong>, Hyunjoo Lee, and Sooel Son <br>
+                        In <em>Proceedings of the World Conference on Information Security Applications</em> , 2019
+                    </li>
+                    <br>
+
+                    <li>
+                        <strong>Git-based CTF: A Simple and Effective Approach to Organizing In-Course Attack-and-Defense Security Competition (<a href="https://www.usenix.org/system/files/conference/ase18/ase18-paper_wi.pdf">PDF</a>)(<a href="https://github.com/SoftSec-KAIST/GitCTF">Github</a>)</strong><br>
+                        <strong>Seongil Wi</strong>, Jaeseung Choi, and Sang Kil Cha.<br>
+                        In <em>Proceedings of the USENIX Workshop on Advances in Security Education</em> , 2018
+                    </li>
+                    <br>
+                </ol> 
+            </div>
+        </article>
+
+        <!-- exp -->
+        <article id="experience" class="wrapper style3">
+            <div class="container">
+                <h2><i class="fas fa-fist-raised"></i> Experience</h2>
+                <ul>
+                    <li>
+                        <strong>Mar. 2019 - Jun. 2019</strong>,
+                        <strong>Teaching Assistant</strong>, <a href="https://syssec.kaist.ac.kr/~yongdaek/courses/is511/">Information Security</a>, KAIST.
+                    </li>
+                    <li>
+                        <strong>Aug. 2018 - Dec. 2018</strong>,
+                        <strong>Teaching Assistant</strong>, <a href="https://docs.google.com/document/d/1oRNC_twHU3eEsNxfN-EyKpqWlSH_MaWfzF5Zuo1VRkg">Machine Learning Application Trends in Information Security</a>, KAIST.
+                    </li>
+                    <li>
+                        <strong>Mar. 2018 - Jun. 2018</strong>,
+                        <strong>Teaching Assistant</strong>, <a href="https://github.com/KAIST-IS521/2018-Spring">Information Security Laboratory</a>, KAIST.
+                    </li>
+                    <li>
+                        <strong>Jun. 2014 - Dec. 2016</strong>,
+                        <strong>Member of Computer Security Study Club</strong>, <a href="https://www.facebook.com/HandongAPP">GHOST</a> in HGU. 
+                    </li>
+                    <li>
+                        <strong>Aug. 2016 - Dec. 2016</strong>,
+                        <strong>Teaching Assistant & Tutor</strong>, C Programming, HGU.
+                    </li>
+                    <li>
+                        <strong>Nov. 2015 - Dec. 2015</strong>,
+                        <strong>Teaching Assistant</strong>, Programming Language Theory, HGU.
+                    </li>
+                </ul> 
+            </div>
+        </article>
+
+        <!-- honors -->
+        <article id="honors" class="wrapper style2">
+            <div class="container">
+                <h2><i class="fas fa-award"></i> Honors</h2>
+                <ul>
+                    <li>
+                        <strong>Feb. 2017</strong>, B.S Magna Cum Laude Graduate.
+                    </li>
+                    <li>
+                        <strong>Feb. 2015 - Feb. 2017</strong>, National Scholarship for Science & Engineering, from Korea Student Aid Foundation (KOSAF).  
+                    </li>
+                </ul> 
+            </div>
+        </article>
+
+        <article id="contact" class="wrapper style4">
+            <footer>
+                <ul id="copyright">
+                    <li>&copy; Seongil. All rights reserved.</li>
+                </ul>
+            </footer>
+            </div>
+        </article>
+
+        <!-- Scripts -->
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/jquery.scrolly.min.js"></script>
+        <script src="assets/js/browser.min.js"></script>
+        <script src="assets/js/breakpoints.min.js"></script>
+        <script src="assets/js/util.js"></script>
+        <script src="assets/js/main.js"></script>
+
+    </body>
+</html>
