--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <ul class="container">
                 <li><a href="#top">Top</a></li>
                 <li><a href="#aboutme">About Me</a></li>
-                <li><a href="#education">Education</a></li>
+                <li><a href="#education">Edu.</a></li>
                 <li><a href="#publications">Publications</a></li>
-                <li><a href="#experience">Experience</a></li>
+                <li><a href="#experience">Exp.</a></li>
                 <li><a href="#honors">Honors</a></li>
             </ul>
         </nav>
