--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <ul class="container">
                 <li><a href="#top">Top</a></li>
                 <li><a href="#aboutme">About Me</a></li>
-                <li><a href="#education">Edu.</a></li>
-                <li><a href="#publications">Publications</a></li>
+                <li><a href="#education">EDU.</a></li>
+                <li><a href="#publications">PUB.</a></li>
                 <li><a href="#experience">Exp.</a></li>
                 <li><a href="#honors">Honors</a></li>
             </ul>
