--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav id="nav">
             <ul class="container">
                 <li><a href="#top">Top</a></li>
-                <li><a href="#aboutme">About Me</a></li>
+                <li><a href="#aboutme">Me</a></li>
                 <li><a href="#education">EDU.</a></li>
                 <li><a href="#publications">PUB.</a></li>
                 <li><a href="#experience">Exp.</a></li>
