--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="#aboutme">Me</a></li>
                 <li><a href="#education">EDU.</a></li>
                 <li><a href="#publications">PUB.</a></li>
-                <li><a href="#experience">Exp.</a></li>
+                <li><a href="#experience">EXP.</a></li>
                 <li><a href="#honors">Honors</a></li>
             </ul>
         </nav>
