--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     </li>
                     <li>
                         <strong>Jun. 2014 - Dec. 2016</strong>,
-                        <strong>Member of Computer Security Study Club</strong>, <a href="https://www.facebook.com/HandongAPP">GHOST</a> in HGU. 
+                        <strong>Member of Computer Security Study Club</strong>, <a href="https://www.facebook.com/HandongAPP">GHOST</a>, HGU. 
                     </li>
                     <li>
                         <strong>Aug. 2016 - Dec. 2016</strong>,
