--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     </li>
                     <li>
                         <strong>Mar. 2018 - Jun. 2018</strong>,
-                        <strong>Teaching Assistant</strong>, <a href="https://github.com/KAIST-IS521/2018-Spring">Information Security Laboratory</a>, KAIST.
+                        <strong>Teaching Assistant</strong>, <a href="https://softsec.kaist.ac.kr/courses/2018s-is521/">Information Security Laboratory</a>, KAIST.
                     </li>
                     <li>
                         <strong>Jun. 2014 - Dec. 2016</strong>,
