Change Github to GitHub

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <a href="https://github.com/seongil-wi" style="font-size: 3em; color: Dodgerblue;">
                                 <i class="fab fa-github-square"></i>
                             </a>
-                            <h3>Github</h3>
+                            <h3>GitHub</h3>
                         </section>
                     </div>
                 </div>
@@ -127,7 +127,7 @@
                     <br>
 
                     <li>
-                        <strong>Git-based CTF: A Simple and Effective Approach to Organizing In-Course Attack-and-Defense Security Competition (<a href="https://www.usenix.org/system/files/conference/ase18/ase18-paper_wi.pdf">PDF</a>)(<a href="https://github.com/SoftSec-KAIST/GitCTF">Github</a>)</strong><br>
+                        <strong>Git-based CTF: A Simple and Effective Approach to Organizing In-Course Attack-and-Defense Security Competition (<a href="https://www.usenix.org/system/files/conference/ase18/ase18-paper_wi.pdf">PDF</a>)(<a href="https://github.com/SoftSec-KAIST/GitCTF">GitHub</a>)</strong><br>
                         <strong>Seongil Wi</strong>, Jaeseung Choi, and Sang Kil Cha.<br>
                         In <em>Proceedings of the USENIX Workshop on Advances in Security Education</em> , 2018
                     </li>
