--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <div class="col-8 col-7-large col-12-medium">
                         <header>
                             <h1>Hi. I'm <strong>Seongil Wi</strong>.</h1>
-                            <p><i>Philippians 4:13 - I can do all this through him who gives me strength.</i></p>
+                            <p><i>Philippians 4:13 - I can do everything through him who gives me strength.</i></p>
                         </header>
                         <p>Hi, I am a Ph.D student, and a member of <a href="https://sites.google.com/site/ssonkaist/home">WSP Lab</a> in KAIST.</p></br>
                         <a href="#aboutme" class="button large scrolly">Learn about what I do</a>
