--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="row aln-center">
                     <div class="col-4 col-6-medium col-12-small">
                         <section class="box style1">
-                            <a href="https://www.facebook.com/wi.sungill" style="font-size: 3em; color: Dodgerblue;">
+                            <a href="https://www.facebook.com/seongil.wi3927" style="font-size: 3em; color: Dodgerblue;">
                                 <i class="fab fa-facebook-square"></i>
                             </a>
                             <h3>Facebook</h3>
