--- a/index.html
+++ b/index.html
@@ -175,6 +175,9 @@
                 <h2><i class="fas fa-award"></i> Honors</h2>
                 <ul>
                     <li>
+                        <strong>Aug. 2019</strong>, 3rd Place, Cybersecurity Research Competition 2019 by KIISC, South Korea (Award 1,000,000 Won).
+                    </li>
+                    <li>
                         <strong>Feb. 2017</strong>, B.S Magna Cum Laude Graduate.
                     </li>
                     <li>
