Update conference name

--- a/index.html
+++ b/index.html
@@ -122,21 +122,21 @@
                     <li>
                         <strong>FUSE: Finding File Upload Bugs via Penetration Testing (<a href="https://www.ndss-symposium.org/ndss2020/">PDF</a>) (to appear)</strong><br>
                         Taekjin Lee, <strong>Seongil Wi</strong>, Suyoung Lee, and Sooel Son <br>
-                        In <em>Proceedings of the Network and Distributed System Security Symposium</em> , 2020
+                        In <em>Proceedings of the Network and Distributed System Security Symposium (NDSS)</em> , 2020
                     </li>
                     <br>
 
                     <li>
                         <strong>FSF: Code Coverage-driven Fuzzing for Software-Defined Networking (<a href="http://www.wisa.or.kr/">PDF</a>) (to appear)</strong><br>
                         Hyuntae Kim, <strong>Seongil Wi</strong>, Hyunjoo Lee, and Sooel Son <br>
-                        In <em>Proceedings of the World Conference on Information Security Applications</em> , 2019
+                        In <em>Proceedings of the World Conference on Information Security Applications (WISA)</em> , 2019
                     </li>
                     <br>
 
                     <li>
                         <strong>Git-based CTF: A Simple and Effective Approach to Organizing In-Course Attack-and-Defense Security Competition (<a href="https://www.usenix.org/system/files/conference/ase18/ase18-paper_wi.pdf">PDF</a>)(<a href="https://github.com/SoftSec-KAIST/GitCTF">GitHub</a>)</strong><br>
                         <strong>Seongil Wi</strong>, Jaeseung Choi, and Sang Kil Cha<br>
-                        In <em>Proceedings of the USENIX Workshop on Advances in Security Education</em> , 2018
+                        In <em>Proceedings of the USENIX Workshop on Advances in Security Education (USENIX ASE)</em> , 2018
                     </li>
                     <br>
                 </ol> 
