--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <ul>
                     <li>
                         <strong>2019 - <i class="far fa-clock"></i></strong> <br>
-                        <strong>Ph.D <a href="https://sites.google.com/site/ssonkaist/home">@KAIST WSP Lab</a></strong>, <a href="https://gsis.kaist.ac.kr/">Graduate School of Information Security</a>, <a href="http://www.kaist.ac.kr/">KAIST</a> (Advisor: <a href="https://sites.google.com/site/ssonkaist/home">Sooel Son</a>)
+                        <strong>Ph.D <a href="https://wsp-lab.github.io/">@KAIST WSP Lab</a></strong>, <a href="https://gsis.kaist.ac.kr/">Graduate School of Information Security</a>, <a href="http://www.kaist.ac.kr/">KAIST</a> (Advisor: <a href="https://sites.google.com/site/ssonkaist/home">Sooel Son</a>)
                     </li>
                     <br>
                     <li>
