--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 My current research interest spans mainly around software and
                 web security, program analysis, fuzz testing, and security
                 education. </br>
-                <i class="fas fa-home"></i> Room 2307, N5 Building, KAIST</br>
+                <i class="fas fa-home"></i> Room 4439, E3-1 Building, KAIST</br>
                 <i class="fas fa-envelope"></i> seongil.wi@kaist.ac.kr</br></br>
 
                 <div class="row aln-center">
