--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
         <!-- Nav -->
         <nav id="nav">
             <ul class="container">
-                <li><a href="#top">Top</a></li>
-                <li><a href="#aboutme">Me</a></li>
-                <li><a href="#education">EDU.</a></li>
-                <li><a href="#publications">PUB.</a></li>
-                <li><a href="#experience">EXP.</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#publications">Publication</a></li>
+                <li><a href="#experience">Experience</a></li>
                 <li><a href="#honors">Honors</a></li>
             </ul>
         </nav>
@@ -161,31 +159,59 @@
             <div class="container">
                 <h2><i class="fas fa-fist-raised"></i> Experience</h2>
                 <ul>
-                    <li>
-                        <strong>Mar. 2019 - Jun. 2019</strong>,
-                        <strong>Teaching Assistant</strong>, <a href="https://syssec.kaist.ac.kr/~yongdaek/courses/is511/">Information Security</a>, KAIST.
+                    <li> 
+                        <strong>Academic Service: External Reviewer</strong> 
+                        <ul>
+                            <li>ccs 2022, www 2022, ndss 2022, usenix security 2022, ccs 2021, usenix security 2021, ndss 2021, acns 2021, acsac 2021, acsac 2020</li>
+                        </ul>
                     </li>
-                    <li>
-                        <strong>Aug. 2018 - Dec. 2018</strong>,
-                        <strong>Teaching Assistant</strong>, <a href="https://docs.google.com/document/d/1oRNC_twHU3eEsNxfN-EyKpqWlSH_MaWfzF5Zuo1VRkg">Machine Learning Application Trends in Information Security</a>, KAIST.
+                    <li> 
+                        <strong>Patent</strong> 
+                        <ul>
+                            <li>
+                                10-2020-0138388
+                                <ul>
+                                    <li>Korean: SDN 웹 인터페이스에 대한 CSRF 취약점을 탐지하는 방법 및 장치</li> 
+                                    <li>English: Method and Apparatus for Detecting Cross-Site Request Forgery Vulnerabilities for Web Interface of Software Defined Network</li>
+                                </ul>
+                            </li>
+                            <li>
+                                10-2020-0001450
+                                <ul>
+                                    <li>Korean: 코드 커버리지를 이용하는 SDN에 대한 퍼징방법</li> 
+                                    <li>English: Algorithm for Detecting Bugs in Software-Defined Networking using Code Coverage</li>
+                                </ul>
+                            </li>
+                            <li>
+                                10-2018-0094406
+                                <ul>
+                                    <li>Korean: 분산 버전 관리 시스템 기반 공격방어 형식의 해킹 플랫폼 제공 시스템 및 이를 이용한 해킹 대회 제공 방법</li> 
+                                    <li>English: Git-based System and Method for Providing Attack and Defense Hacking Contests</li>
+                                </ul>
+                            </li>
+                        </ul>
                     </li>
-                    <li>
-                        <strong>Mar. 2018 - Jun. 2018</strong>,
-                        <strong>Teaching Assistant</strong>, <a href="https://softsec.kaist.ac.kr/courses/2018s-is521/">Information Security Laboratory</a>, KAIST.
+                    <li> 
+                        <strong>Teaching Assistant</strong> 
+                        <ul>
+                            <li>CS206: <a href="https://spostman.github.io/cs206c-fall2020">Data Structure</a>, 2020F, KAIST</li>
+                            <li>IS511: <a href="https://sites.google.com/view/is511">Information Security</a>, 2020S, KAIST</li>
+                            <li>IS561: <a href="https://softsec.kaist.ac.kr/courses/2019f-is561/">Binary Code Analysis and Secure Software Systems</a>, 2019F, KAIST</li>
+                            <li>IS511: <a href="https://syssec.kaist.ac.kr/~yongdaek/courses/is511/">Information Security</a>, 2019S, KAIST</li>
+                            <li>IS593: <a href="https://docs.google.com/document/d/1oRNC_twHU3eEsNxfN-EyKpqWlSH_MaWfzF5Zuo1VRkg">Machine Learning Application Trends in Information Security</a>, 2018F, KAIST</li>
+                            <li>IS521: <a href="https://softsec.kaist.ac.kr/courses/2018s-is521/">Information Security Laboratory</a>, 2018S, KAIST</li>
+                            <li>GCS10058: C Programming, 2016F, HGU</li>
+                            <li>ECE20013: Programming Language Theory, 2014F, HGU</li>
+                        </ul>
                     </li>
-                    <li>
-                        <strong>Aug. 2016 - Dec. 2016</strong>,
-                        <strong>Teaching Assistant & Tutor</strong>, C Programming, HGU.
+                    <li> 
+                        <strong>Club</strong> 
+                        <ul>
+
+                            <li>Member of Computer Security Study Club, <a href="https://www.facebook.com/HandongAPP">GHOST</a>, HGU</li>
+                        </ul>
                     </li>
-                    <li>
-                        <strong>Nov. 2015 - Dec. 2015</strong>,
-                        <strong>Teaching Assistant</strong>, Programming Language Theory, HGU.
-                    </li>
-                    <li>
-                        <strong>Jun. 2014 - Dec. 2016</strong>,
-                        <strong>Member of Computer Security Study Club</strong>, <a href="https://www.facebook.com/HandongAPP">GHOST</a>, HGU. 
-                    </li>
-                </ul> 
+                </ul>
             </div>
         </article>
 
@@ -194,6 +220,9 @@
             <div class="container">
                 <h2><i class="fas fa-award"></i> Honors</h2>
                 <ul>
+                    <li>
+                        <strong>Feb. 2022</strong>, Participation Prize, Samsung Human Tech (삼성휴먼테크논문대상) 2022 by SAMSUNG, South Korea (Award 2,000,000 Won).
+                    </li>
                     <li>
                         <strong>Aug. 2019</strong>, 2nd Prize, Cybersecurity Research Competition 2019 by KIISC, South Korea (Award 1,000,000 Won).
                     </li>
