--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav id="nav">
             <ul class="container">
                 <li><a href="#education">Education</a></li>
-                <li><a href="#publications">Publication</a></li>
+                <li><a href="#publications">Publications</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#honors">Honors</a></li>
             </ul>
