--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@
                 <h2><i class="fas fa-book"></i> Publications</h2>
                 <ol>
                     <li>
-                        <strong>HiddenCPG: Large-Scale Vulnerable Clone Detection Using Subgraph Isomorphism of Code Property Graphs (<a href="https://www2022.thewebconf.org/">PDF</a>)</strong><br>
+                        <strong>HiddenCPG: Large-Scale Vulnerable Clone Detection Using Subgraph Isomorphism of Code Property Graphs (<a href="https://dl.acm.org/doi/pdf/10.1145/3485447.3512235">PDF</a>)</strong><br>
                         <strong>Seongil Wi</strong>, Sijae Woo, Joyce Whang, Sooel Son <br>
                         In <em>The Web Conference 2022: Security, Privacy, and Trust Research Track (WWW)</em> , To appear, 2022
                     </li>
                     <br>
 
                     <li>
-                        <strong>Link: Black-Box Detection of Cross-Site Scripting Vulnerabilities Using Reinforcement Learning (<a href="https://www2022.thewebconf.org/">PDF</a>)</strong><br>
+                        <strong>Link: Black-Box Detection of Cross-Site Scripting Vulnerabilities Using Reinforcement Learning (<a href="https://dl.acm.org/doi/pdf/10.1145/3485447.3512234/">PDF</a>)</strong><br>
                         Soyoung Lee, <strong>Seongil Wi</strong>, Sooel Son <br>
                         In <em>The Web Conference 2022: Security, Privacy, and Trust Research Track (WWW)</em> , To appear, 2022
                     </li>
@@ -138,7 +138,7 @@
                     <br>
 
                     <li>
-                        <strong>FSF: Code Coverage-driven Fuzzing for Software-Defined Networking (<a href="https://link.springer.com/chapter/10.1007/978-3-030-39303-8_4">PDF</a>)</strong><br>
+                        <strong>FSF: Code Coverage-driven Fuzzing for Software-Defined Networking (<a href="Kim2020_WISA.pdf">PDF</a>)</strong><br>
                         Hyuntae Kim, <strong>Seongil Wi</strong>, Hyunjoo Lee, and Sooel Son <br>
                         In <em>Proceedings of the World Conference on Information Security Applications (WISA)</em> , 2019
                     </li>
