--- a/index.html
+++ b/index.html
@@ -118,16 +118,22 @@
                 <h2><i class="fas fa-book"></i> Publications</h2>
                 <ol>
                     <li>
+                        <strong>HearMeOut: Detecting Voice Phishing Activities in Android (<a href="https://www.sigmobile.org/mobisys/2022">Paper</a>)</strong><br>
+                        Joongyum Kim, Jihwan Kim, <strong>Seongil Wi</strong>, Yongdae Kim, and Sooel Son <br>
+                        In <em>Proceedings of the ACM International Conference on Mobile Systems, Applications, and Services (MobiSys)</em> , To appear, 2022
+                    </li>
+                    <br>
+                    <li>
                         <strong>HiddenCPG: Large-Scale Vulnerable Clone Detection Using Subgraph Isomorphism of Code Property Graphs (<a href="https://dl.acm.org/doi/pdf/10.1145/3485447.3512235">Paper</a>)(<a href="https://github.com/WSP-LAB/HiddenCPG">GitHub</a>)(<a href="HiddenCPG_WWW.pdf">Slides</a>)</strong><br>
                         <strong>Seongil Wi</strong>, Sijae Woo, Joyce Whang, Sooel Son <br>
-                        In <em>The Web Conference 2022: Security, Privacy, and Trust Research Track (WWW)</em> , To appear, 2022
+                        In <em>Proceedings of the Web Conference 2022 (WWW)</em>, 2022
                     </li>
                     <br>
 
                     <li>
                         <strong>Link: Black-Box Detection of Cross-Site Scripting Vulnerabilities Using Reinforcement Learning (<a href="https://dl.acm.org/doi/pdf/10.1145/3485447.3512234/">Paper</a>)(<a href="https://github.com/WSP-LAB/Link">GitHub</a>)(<a href="Link_WWW.pdf">Slides</a>)</strong><br>
                         Soyoung Lee, <strong>Seongil Wi</strong>, Sooel Son <br>
-                        In <em>The Web Conference 2022: Security, Privacy, and Trust Research Track (WWW)</em> , To appear, 2022
+                        In <em>The Web Conference 2022: Security, Privacy, and Trust Research Track (WWW)</em>, 2022
                     </li>
                     <br>
                     <li>
