--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <li>
                         <strong>Link: Black-Box Detection of Cross-Site Scripting Vulnerabilities Using Reinforcement Learning (<a href="https://dl.acm.org/doi/pdf/10.1145/3485447.3512234/">Paper</a>)(<a href="https://github.com/WSP-LAB/Link">GitHub</a>)(<a href="Link_WWW.pdf">Slides</a>)</strong><br>
                         Soyoung Lee, <strong>Seongil Wi</strong>, Sooel Son <br>
-                        In <em>The Web Conference 2022: Security, Privacy, and Trust Research Track (WWW)</em>, 2022
+                        In <em>Proceedings of the Web Conference 2022 (WWW)</em>, 2022
                     </li>
                     <br>
                     <li>
