--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <h2><i class="fas fa-book"></i> Publications</h2>
                 <ol>
                     <li>
-                        <strong>HearMeOut: Detecting Voice Phishing Activities in Android (<a href=HearMeOut_Mobisys.pdf">Paper</a>)</strong><br>
+                        <strong>HearMeOut: Detecting Voice Phishing Activities in Android (<a href=HearMeOut_Mobisys.pdf">Paper</a>)(<a href="https://github.com/WSP-LAB/hearmeout">GitHub</a>)</strong><br>
                         Joongyum Kim, Jihwan Kim, <strong>Seongil Wi</strong>, Yongdae Kim, and Sooel Son <br>
                         In <em>Proceedings of the ACM International Conference on Mobile Systems, Applications, and Services (MobiSys)</em> , 2022
                     </li>
