--- a/index.html
+++ b/index.html
@@ -124,14 +124,14 @@
                     </li>
                     <br>
                     <li>
-                        <strong>HiddenCPG: Large-Scale Vulnerable Clone Detection Using Subgraph Isomorphism of Code Property Graphs (<a href="https://wsp-lab.github.io/papers/wi-hiddencpg-www22.pdf">Paper</a>)(<a href="https://github.com/WSP-LAB/HiddenCPG">GitHub</a>)(<a href="HiddenCPG_WWW.pdf">Slides</a>)</strong><br>
+                        <strong>HiddenCPG: Large-Scale Vulnerable Clone Detection Using Subgraph Isomorphism of Code Property Graphs (<a href="https://wsp-lab.github.io/papers/wi-hiddencpg-www22.pdf">Paper</a>)(<a href="https://github.com/WSP-LAB/HiddenCPG">GitHub</a>)(<a href="HiddenCPG_WWW.pdf">Slides</a>)(<a href="https://www.youtube.com/watch?v=5AkfIllB6As">Video</a>)</strong><br>
                         <strong>Seongil Wi</strong>, Sijae Woo, Joyce Whang, Sooel Son <br>
                         In <em>Proceedings of the Web Conference 2022 (WWW)</em>, 2022
                     </li>
                     <br>
 
                     <li>
-                        <strong>Link: Black-Box Detection of Cross-Site Scripting Vulnerabilities Using Reinforcement Learning (<a href="https://wsp-lab.github.io/papers/lee-link-www22.pdf">Paper</a>)(<a href="https://github.com/WSP-LAB/Link">GitHub</a>)(<a href="Link_WWW.pdf">Slides</a>)</strong><br>
+                        <strong>Link: Black-Box Detection of Cross-Site Scripting Vulnerabilities Using Reinforcement Learning (<a href="https://wsp-lab.github.io/papers/lee-link-www22.pdf">Paper</a>)(<a href="https://github.com/WSP-LAB/Link">GitHub</a>)(<a href="Link_WWW.pdf">Slides</a>)(<a href="https://www.youtube.com/watch?v=8_FH99kusRM">Video</a>)</strong><br>
                         Soyoung Lee, <strong>Seongil Wi</strong>, Sooel Son <br>
                         In <em>Proceedings of the Web Conference 2022 (WWW)</em>, 2022
                     </li>
