--- a/index.html
+++ b/index.html
@@ -169,12 +169,22 @@
                     <li> 
                         <strong>Academic Service: External Reviewer</strong> 
                         <ul>
-                            <li>S&P 2023, USENIX Security 2023, CCS 2022, WWW 2022, NDSS 2022, USENIX Security 2022, CCS 2021, USENIX Security 2021, NDSS 2021, ACNS 2021, ACSAC 2021, ACSAC 2020</li>
+                            <li>Oakland (S&P) 2023</li>
+                            <li>USENIX Security 2023, 2022, 2021</li>
+                            <li>CCS 2022, 2021</li>
+                            <li>NDSS 2022, 2021</li>
+                            <li>WWW 2023, 2022</li>
+                            <li>ACSAC 2021, 2020, 2018</li>
+                            <li>ACNS 2021</li>
+                            <li>IEICE 2020, 2021</li>
                         </ul>
                     </li> 
                     <li> 
                         <strong>Patent</strong> 
                         <ul>
+                            <li>
+                                10-2022-0047124: Method and System for Detecting Reflected Cross-Site Scripting Vulnerabilities using Reinforcement Learning</li>
+                            </li>
                             <li>
                                 10-2020-0138388: Method and Apparatus for Detecting Cross-Site Request Forgery Vulnerabilities for Web Interface of Software Defined Network</li>
                             </li>
@@ -224,6 +234,9 @@
                     <li>
                         <strong>Feb. 2017</strong>, B.S Magna Cum Laude Graduate.
                     </li>
+                    <li>
+                        <strong>2014 Fall Semester, 2015 Spring Semester</strong>, Academic Excellence Scholarship (Top 1%).
+                    </li>                    
                     <li>
                         <strong>Feb. 2015 - Feb. 2017</strong>, National Scholarship for Science & Engineering, from Korea Student Aid Foundation (KOSAF).  
                     </li>
