--- a/index.html
+++ b/index.html
@@ -225,21 +225,25 @@
             <div class="container">
                 <h2><i class="fas fa-award"></i> Honors</h2>
                 <ul>
-                    <li>
-                        <strong>Feb. 2022</strong>, Participation Prize, Samsung Human Tech (삼성휴먼테크논문대상) 2022 by SAMSUNG, South Korea (Award 2,000,000 Won).
+                    , NAVER Ph.D. Fellowship 2021.
+                     <li>
+                        <strong>Dec. 2021</strong>, NAVER Ph.D. Fellowship 2022 by NAVER, South Korea.
                     </li>
                     <li>
-                        <strong>Aug. 2019</strong>, 2nd Prize, Cybersecurity Research Competition 2019 by KIISC, South Korea (Award 1,000,000 Won).
+                        <strong>Feb. 2022</strong>, Participation Prize, Samsung Human Tech (삼성휴먼테크논문대상) 2022 by SAMSUNG, South Korea.
+                    </li>
+                    <li>
+                        <strong>Aug. 2019</strong>, 2nd Prize, Cybersecurity Research Competition 2019 by KIISC, South Korea.
                     </li>
                     <li>
                         <strong>Feb. 2017</strong>, B.S Magna Cum Laude Graduate.
-                    </li>
-                    <li>
-                        <strong>2014 Fall Semester, 2015 Spring Semester</strong>, Academic Excellence Scholarship (Top 1%).
-                    </li>                    
+                    </li>            
                     <li>
                         <strong>Feb. 2015 - Feb. 2017</strong>, National Scholarship for Science & Engineering, from Korea Student Aid Foundation (KOSAF).  
                     </li>
+                    <li>
+                        <strong>2014 Fall Semester, 2015 Spring Semester</strong>, Academic Excellence Scholarship (Top 1%).
+                    </li>        
                 </ul> 
             </div>
         </article>
