--- a/index.html
+++ b/index.html
@@ -119,6 +119,12 @@
                 <h2><i class="fas fa-book"></i> Publications</h2>
                 <ol>
                     <li>
+                        <strong>DiffCSP: Finding Browser Bugs in Content Security Policy Enforcement through Differential Testing <em>(to appear)</em></strong><br>
+                        <strong>Seongil Wi</strong>, Trung Tin Nguyen, Jihwan Kim, Ben Stock, and Sooel Son <br>
+                        In <em>Proceedings of the Network and Distributed System Security Symposium (<strong>NDSS</strong>)</em>, 2022 (<strong>Acceptance Rate: 16.2％</strong>)
+                    </li>
+                    <br>
+                    <li>
                         <strong>HearMeOut: Detecting Voice Phishing Activities in Android (<a href="HearMeOut_Mobisys.pdf">Paper</a>)(<a href="https://github.com/WSP-LAB/hearmeout">GitHub</a>)</strong><br>
                         Joongyum Kim, Jihwan Kim, <strong>Seongil Wi</strong>, Yongdae Kim, and Sooel Son <br>
                         In <em>Proceedings of the ACM International Conference on Mobile Systems, Applications, and Services (<strong>MobiSys</strong>)</em>, 2022 (<strong>Acceptance Rate: 21％</strong>)
