--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <h2><i class="fas fa-fist-raised"></i> Experience</h2>
                 <ul>
                     <li> 
-                        <strong>Academic Service: External Reviewer</strong> 
+                        <strong>Academic Service: Sub-Reviewer</strong> 
                         <ul>
                             <li>Oakland (S&P) 2023</li>
                             <li>USENIX Security 2023, 2022, 2021</li>
