Update course info

--- a/index.html
+++ b/index.html
@@ -147,41 +147,20 @@
                 <h2><i class="fas fa-fist-raised"></i> Experience</h2>
                 <ul>
                     <li> 
-                        <strong>Academic Service: Sub-Reviewer</strong> 
+                        <strong>Program Committee</strong> 
                         <ul>
-                            <li>Oakland (S&P) 2023</li>
-                            <li>USENIX Security 2023, 2022, 2021</li>
-                            <li>CCS 2022, 2021</li>
-                            <li>NDSS 2022, 2021</li>
-                            <li>WWW 2023, 2022</li>
-                            <li>ACSAC 2021, 2020, 2018</li>
-                            <li>ACNS 2021</li>
-                            <li>IEICE 2020, 2021</li>
+                            <li>ACSAC 2024</li>
                         </ul>
                     </li> 
+
                     <li> 
-                        <strong>Patent</strong> 
-                        <ul>
-                            <li>
-                                10-2022-0047124: Method and System for Detecting Reflected Cross-Site Scripting Vulnerabilities using Reinforcement Learning</li>
-                            </li>
-                            <li>
-                                10-2020-0138388: Method and Apparatus for Detecting Cross-Site Request Forgery Vulnerabilities for Web Interface of Software Defined Network</li>
-                            </li>
-                            <li>
-                                10-2020-0001450: Algorithm for Detecting Bugs in Software-Defined Networking using Code Coverage</li>
-                            </li>
-                            <li>
-                                10-2018-0094406: Git-based System and Method for Providing Attack and Defense Hacking Contests</li>
-                            </li>
-                        </ul>
-                    </li>
-               <!--     <li> 
                         <strong>Teaching</strong> 
                         <ul>
                             <li>CSE467: Computer Security - <a href="https://websec-lab.github.io/courses/2023f-cse467/">2023F</a></li>
+
+                            <li>CSE610: Web Programming and Security - <a href="https://websec-lab.github.io/courses/2024s-cse610/">2024S</a></li>
                         </ul>
-                        </li>    --!>
+                        </li>    
                 </ul>
             </div>
         </article>
