--- a/index.html
+++ b/index.html
@@ -149,16 +149,26 @@
                     <li> 
                         <strong>Program Committee</strong> 
                         <ul>
-                            <li>ACSAC 2024</li>
+                            <li>NDSS 2026</li>
+                            <li>ACSAC 2024, 2025</li>
                         </ul>
                     </li> 
-
                     <li> 
                         <strong>Teaching</strong> 
                         <ul>
-                            <li>CSE467: Computer Security - <a href="https://websec-lab.github.io/courses/2023f-cse467/">2023F</a></li>
-
-                            <li>CSE610: Web Programming and Security - <a href="https://websec-lab.github.io/courses/2024s-cse610/">2024S</a></li>
+                            <li>CSE467: Computer Security
+                            <ul>
+                                <li><a href="https://websec-lab.github.io/courses/2023f-cse467/">2023F</a> (<i class="fas fa-award"> Ranked 1st in course evaluations in the CSE department</i>)</li>
+                                <li><a href="https://websec-lab.github.io/courses/2025s-cse467/">2025S</a></li>
+                            </ul>
+                            <li>CSE610: Web Programming and Security
+                            <ul>
+                                <li><a href="https://websec-lab.github.io/courses/2024s-cse610/">2024S</a> (<i class="fas fa-award"> Ranked 1st in course evaluations in the CSE department</i>)</li>
+                            </ul>
+                            <li>CSE261: Computer Architecture
+                            <ul>
+                                <li><a href="https://websec-lab.github.io/courses/2024f-cse261/">2024F</a> (<i class="fas fa-award">Ranked 2nd in course evaluations in the CSE department</i>)</li>
+                            </ul>
                         </ul>
                         </li>    
                 </ul>
