--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <head>
         <title>Seongil Wi</title>
         <meta charset="utf-8" />
-        <meta name="description" content="Seongil Wi / 위성일. Ph.D. student @KAIST WSP Lab.">
+        <meta name="description" content="Seongil Wi / 위성일. Assistant Professor @ UNIST.">
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="stylesheet" href="assets/css/main.css" />
     </head>
